--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@ant-design/colors": "^6.0.0",
 		"@reduxjs/toolkit": "^1.5.1",
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.3.2",
@@ -13,7 +12,9 @@
 		"@types/react": "^16.9.0",
 		"@types/react-dom": "^16.9.0",
 		"@types/react-redux": "^7.1.7",
-		"antd": "^4.16.3",
+		"install": "^0.13.0",
+		"jszip": "^3.6.0",
+		"node-sass": "^5.0.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-easy-crop": "^3.5.1",
@@ -41,5 +42,6 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
-	}
+	},
+	"devDependencies": {}
 }
